* Working code of Google SignIn flow * Setup right credentials with the SHA1 generated from Android Studio

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="org.mpmg.mpapp.ui.login.LoginFragment"
+        android:name="org.mpmg.mpapp.ui.fragments.login.LoginFragment"
         android:label="LoginFragment" />
 </navigation>
