--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -7,5 +7,13 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="org.mpmg.mpapp.ui.fragments.login.LoginFragment"
-        android:label="LoginFragment" />
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_mapFragment"
+            app:destination="@id/mapFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/mapFragment"
+        android:name="org.mpmg.mpapp.ui.fragments.map.MapFragment"
+        android:label="MapFragment" />
 </navigation>
