--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,15 +4,100 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_main"
     tools:context=".ui.fragments.login.LoginFragment">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="208dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/mmpg_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/textView"
+        style="@style/MPAppTheme.InputTitle1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginTop="86dp"
+        android:labelFor="@id/editText_loginFragment_userInput"
+        android:text="@string/title_login_email"
+        app:layout_constraintStart_toStartOf="@+id/editText_loginFragment_userInput"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <EditText
+        android:id="@+id/editText_loginFragment_userInput"
+        style="@style/MPAppTheme.EditText1"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/height_default"
+        android:layout_marginStart="@dimen/margin_xxlarge"
+        android:layout_marginTop="@dimen/margin_xxsmall"
+        android:layout_marginEnd="@dimen/margin_xxlarge"
+        android:hint="@string/hint_login_email"
+        android:importantForAutofill="no"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView2"
+        style="@style/MPAppTheme.InputTitle1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:labelFor="@id/editText_loginFragment_passwordInput"
+        android:text="@string/title_login_password"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/editText_loginFragment_userInput" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/inputTextLayout_loginFormFragment_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_xxsmall"
+        android:paddingTop="0dp"
+        app:boxBackgroundMode="none"
+        app:hintEnabled="false"
+        app:layout_constraintEnd_toEndOf="@+id/editText_loginFragment_userInput"
+        app:layout_constraintStart_toStartOf="@+id/editText_loginFragment_userInput"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:passwordToggleEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editText_loginFragment_passwordInput"
+            style="@style/MPAppTheme.EditText1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_login_password"
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            android:padding="0dp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
+        style="@style/MPAppTheme.Button1"
+        android:layout_width="300dp"
+        android:layout_height="@dimen/height_default"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/button1"
+        android:text="@string/button_login"
+        app:layout_constraintBottom_toTopOf="@+id/button_loginFragment_googleSignIn"
+        app:layout_constraintEnd_toEndOf="@+id/button_loginFragment_googleSignIn"
+        app:layout_constraintStart_toStartOf="@+id/button_loginFragment_googleSignIn" />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/button_loginFragment_googleSignIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="@dimen/height_default"
+        android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
