--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -45,6 +45,7 @@
             android:hint="@string/hint_login_email"
             android:importantForAutofill="no"
             android:inputType="textEmailAddress"
+            android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -81,7 +82,8 @@
                 android:hint="@string/hint_login_password"
                 android:importantForAutofill="no"
                 android:inputType="textPassword"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
