--- a/app/src/main/res/layout/fragment_public_work_add.xml
+++ b/app/src/main/res/layout/fragment_public_work_add.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,14 +7,203 @@
     android:background="@drawable/background_main"
     tools:context=".ui.fragments.publicwork.fragments.PublicWorkAddFragment">
 
-    <TextView
-        style="@style/MPAppTheme.Title1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_default"
-        android:layout_marginTop="@dimen/margin_xlarge"
-        android:text="@string/title_public_work_add"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView_addPublicWorkFragment_title"
+                style="@style/MPAppTheme.Title1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_default"
+                android:layout_marginTop="@dimen/margin_xlarge"
+                android:text="@string/title_public_work_add"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView4"
+                style="@style/MPAppTheme.InputTitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_xxlarge"
+                android:layout_marginTop="@dimen/margin_large"
+                android:text="@string/label_type_of_work"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView_addPublicWorkFragment_title" />
+
+            <TextView
+                android:id="@+id/textView_addPublicWorkFragment_typeOfWork"
+                style="@style/MPAppTheme.EditText2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_default"
+                android:layout_marginTop="@dimen/margin_xxsmall"
+                android:layout_marginEnd="@dimen/margin_default"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_default"
+                android:src="@drawable/ic_down_chevron"
+                app:layout_constraintBottom_toBottomOf="@+id/textView_addPublicWorkFragment_typeOfWork"
+                app:layout_constraintEnd_toEndOf="@+id/textView_addPublicWorkFragment_typeOfWork"
+                app:layout_constraintTop_toTopOf="@+id/textView_addPublicWorkFragment_typeOfWork"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:id="@+id/textView5"
+                style="@style/MPAppTheme.InputTitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_default"
+                android:text="@string/label_name_of_work"
+                app:layout_constraintStart_toStartOf="@+id/textView4"
+                app:layout_constraintTop_toBottomOf="@+id/textView_addPublicWorkFragment_typeOfWork" />
+
+            <EditText
+                android:id="@+id/editText_addPublicWorkFragment_name"
+                style="@style/MPAppTheme.EditText2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_xxsmall"
+                app:layout_constraintEnd_toEndOf="@+id/textView_addPublicWorkFragment_typeOfWork"
+                app:layout_constraintStart_toStartOf="@+id/textView_addPublicWorkFragment_typeOfWork"
+                app:layout_constraintTop_toBottomOf="@+id/textView5"
+                tools:ignore="Autofill,LabelFor,TextFields" />
+
+            <TextView
+                android:id="@+id/textView6"
+                style="@style/MPAppTheme.InputTitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_default"
+                android:text="@string/label_street"
+                app:layout_constraintStart_toStartOf="@+id/textView5"
+                app:layout_constraintTop_toBottomOf="@+id/editText_addPublicWorkFragment_name" />
+
+            <EditText
+                android:id="@+id/editText_addPublicWorkFragment_street"
+                style="@style/MPAppTheme.EditText2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_xxsmall"
+                app:layout_constraintEnd_toEndOf="@+id/editText_addPublicWorkFragment_name"
+                app:layout_constraintStart_toStartOf="@+id/editText_addPublicWorkFragment_name"
+                app:layout_constraintTop_toBottomOf="@+id/textView6"
+                tools:ignore="Autofill,LabelFor,TextFields"/>
+
+            <TextView
+                android:id="@+id/textView7"
+                style="@style/MPAppTheme.InputTitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_default"
+                android:text="@string/label_cep"
+                app:layout_constraintStart_toStartOf="@+id/textView6"
+                app:layout_constraintTop_toBottomOf="@+id/editText_addPublicWorkFragment_street" />
+
+            <EditText
+                android:id="@+id/editText_addPublicWorkFragment_cep"
+                style="@style/MPAppTheme.EditText2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_xxsmall"
+                android:layout_marginEnd="@dimen/margin_small"
+                app:layout_constraintEnd_toStartOf="@+id/editText_addPublicWorkFragment_number"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/editText_addPublicWorkFragment_street"
+                app:layout_constraintTop_toBottomOf="@+id/textView7"
+                tools:ignore="Autofill,LabelFor,TextFields"/>
+
+            <TextView
+                style="@style/MPAppTheme.InputTitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_small"
+                android:text="@string/label_number"
+                app:layout_constraintBottom_toBottomOf="@+id/textView7"
+                app:layout_constraintStart_toStartOf="@+id/editText_addPublicWorkFragment_number"
+                app:layout_constraintTop_toTopOf="@+id/textView7" />
+
+            <EditText
+                android:id="@+id/editText_addPublicWorkFragment_number"
+                style="@style/MPAppTheme.EditText2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_small"
+                app:layout_constraintEnd_toEndOf="@+id/editText_addPublicWorkFragment_street"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/editText_addPublicWorkFragment_cep"
+                app:layout_constraintTop_toTopOf="@+id/editText_addPublicWorkFragment_cep"
+                tools:ignore="Autofill,LabelFor,TextFields"/>
+
+            <TextView
+                android:id="@+id/textView8"
+                style="@style/MPAppTheme.InputTitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_default"
+                android:text="@string/label_neighborhood"
+                app:layout_constraintStart_toStartOf="@+id/textView7"
+                app:layout_constraintTop_toBottomOf="@+id/editText_addPublicWorkFragment_cep" />
+
+            <EditText
+                android:id="@+id/editText_addPublicWorkFragment_neighborhood"
+                style="@style/MPAppTheme.EditText2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_xxsmall"
+                app:layout_constraintEnd_toEndOf="@+id/editText_addPublicWorkFragment_street"
+                app:layout_constraintStart_toStartOf="@+id/editText_addPublicWorkFragment_street"
+                app:layout_constraintTop_toBottomOf="@+id/textView8"
+                tools:ignore="Autofill,LabelFor,TextFields" />
+
+            <TextView
+                android:id="@+id/textView9"
+                style="@style/MPAppTheme.InputTitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_default"
+                android:text="@string/label_city"
+                app:layout_constraintStart_toStartOf="@+id/textView8"
+                app:layout_constraintTop_toBottomOf="@+id/editText_addPublicWorkFragment_neighborhood" />
+
+            <EditText
+                android:id="@+id/editText_addPublicWorkFragment_city"
+                style="@style/MPAppTheme.EditText2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_xxsmall"
+                app:layout_constraintEnd_toEndOf="@+id/editText_addPublicWorkFragment_neighborhood"
+                app:layout_constraintStart_toStartOf="@+id/editText_addPublicWorkFragment_neighborhood"
+                app:layout_constraintTop_toBottomOf="@+id/textView9"
+                tools:ignore="Autofill,LabelFor,TextFields"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/materialButton_addPublicWorkFragment_add"
+                style="@style/MPAppTheme.Button1"
+                android:layout_width="300dp"
+                android:layout_marginTop="@dimen/margin_xlarge"
+                android:layout_marginBottom="@dimen/margin_xlarge"
+                android:layout_height="@dimen/height_default"
+                android:backgroundTint="@color/button1"
+                android:text="@string/title_public_work_add"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editText_addPublicWorkFragment_city" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
