--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="title1">#828282</color>
     <color name="title2">#333333</color>
 
+    <color name="label1">#4F4F4F</color>
+
     <color name="button1">#2F80ED</color>
     <color name="button2">#E0E0E0</color>
 
