--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -10,8 +10,8 @@
         android:name="org.mpmg.mpapp.ui.fragments.login.LoginFragment"
         android:label="LoginFragment">
         <action
-            android:id="@+id/action_loginFragment_to_baseFragment"
-            app:destination="@id/baseFragment" />
+            android:id="@+id/action_loginFragment_to_setupApplicationFragment"
+            app:destination="@id/setupApplicationFragment" />
     </fragment>
 
     <fragment
@@ -29,6 +29,15 @@
         android:name="org.mpmg.mpapp.ui.fragments.collect.CollectMainFragment"
         android:label="fragment_collect_main"
         tools:layout="@layout/fragment_collect_main" />
+    <fragment
+        android:id="@+id/setupApplicationFragment"
+        android:name="org.mpmg.mpapp.ui.fragments.setup.SetupApplicationFragment"
+        android:label="fragment_setup_application"
+        tools:layout="@layout/fragment_setup_application">
+        <action
+            android:id="@+id/action_setupApplicationFragment_to_baseFragment"
+            app:destination="@id/baseFragment" />
+    </fragment>
 
 
 </navigation>
