* Cleaning form after public work added

--- a/app/src/main/res/layout/fragment_public_work_add.xml
+++ b/app/src/main/res/layout/fragment_public_work_add.xml
@@ -86,7 +86,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_xxsmall"
-                    android:text="@={publicWorkViewModel.currentPublicWorkAndAddress.publicWork.name}"
+                    android:inputType="textCapWords"
+                    android:text="@={publicWorkViewModel.currentPublicWork.name}"
                     app:layout_constraintEnd_toEndOf="@+id/textView_addPublicWorkFragment_typeOfWork"
                     app:layout_constraintStart_toStartOf="@+id/textView_addPublicWorkFragment_typeOfWork"
                     app:layout_constraintTop_toBottomOf="@+id/textView5"
@@ -108,7 +109,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_xxsmall"
-                    android:text="@={publicWorkViewModel.currentPublicWorkAndAddress.address.street}"
+                    android:inputType="textCapWords"
+                    android:text="@={publicWorkViewModel.currentAddress.street}"
                     app:layout_constraintEnd_toEndOf="@+id/editText_addPublicWorkFragment_name"
                     app:layout_constraintStart_toStartOf="@+id/editText_addPublicWorkFragment_name"
                     app:layout_constraintTop_toBottomOf="@+id/textView6"
@@ -131,7 +133,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_xxsmall"
                     android:layout_marginEnd="@dimen/margin_small"
-                    android:text="@={publicWorkViewModel.currentPublicWorkAndAddress.address.cep}"
+                    android:inputType="textCapWords"
+                    android:nextFocusDown="@id/editText_addPublicWorkFragment_number"
+                    android:text="@={publicWorkViewModel.currentAddress.cep}"
                     app:layout_constraintEnd_toStartOf="@+id/editText_addPublicWorkFragment_number"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="@+id/editText_addPublicWorkFragment_street"
@@ -154,7 +158,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_small"
-                    android:text="@={publicWorkViewModel.currentPublicWorkAndAddress.address.number}"
+                    android:inputType="textCapWords"
+                    android:text="@={publicWorkViewModel.currentAddress.number}"
                     app:layout_constraintEnd_toEndOf="@+id/editText_addPublicWorkFragment_street"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/editText_addPublicWorkFragment_cep"
@@ -177,7 +182,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_xxsmall"
-                    android:text="@={publicWorkViewModel.currentPublicWorkAndAddress.address.neighborhood}"
+                    android:inputType="textCapWords"
+                    android:text="@={publicWorkViewModel.currentAddress.neighborhood}"
                     app:layout_constraintEnd_toEndOf="@+id/editText_addPublicWorkFragment_street"
                     app:layout_constraintStart_toStartOf="@+id/editText_addPublicWorkFragment_street"
                     app:layout_constraintTop_toBottomOf="@+id/textView8"
@@ -199,7 +205,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_xxsmall"
-                    android:text="@={publicWorkViewModel.currentPublicWorkAndAddress.address.city}"
+                    android:inputType="textCapWords"
+                    android:text="@={publicWorkViewModel.currentAddress.city}"
                     app:layout_constraintEnd_toEndOf="@+id/editText_addPublicWorkFragment_neighborhood"
                     app:layout_constraintStart_toStartOf="@+id/editText_addPublicWorkFragment_neighborhood"
                     app:layout_constraintTop_toBottomOf="@+id/textView9"
@@ -213,6 +220,7 @@
                     android:layout_marginTop="@dimen/margin_xlarge"
                     android:layout_marginBottom="@dimen/margin_xlarge"
                     android:backgroundTint="@color/button1"
+                    android:enabled="@{publicWorkViewModel.isPublicWorkValid}"
                     android:text="@string/title_public_work_add"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
