--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -23,11 +23,11 @@
         android:title="@string/menu_add"
         app:showAsAction="always" />
 
-    <item
-        android:id="@+id/publicWorkSendFragment"
-        android:icon="@drawable/ic_send"
-        android:orderInCategory="3"
-        android:title="@string/menu_send"
-        app:showAsAction="always"/>
+<!--    <item-->
+<!--        android:id="@+id/publicWorkSendFragment"-->
+<!--        android:icon="@drawable/ic_send"-->
+<!--        android:orderInCategory="3"-->
+<!--        android:title="@string/menu_send"-->
+<!--        app:showAsAction="always"/>-->
 
 </menu>
