--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,6 +53,7 @@
         <item name="android:textSize">16sp</item>
         <item name="android:background">@drawable/background_input2</item>
         <item name="android:fontFamily">@font/nunito_regular</item>
+        <item name="android:singleLine">true</item>
     </style>
 
     <style name="MPAppTheme.Button1" parent="Widget.MaterialComponents.Button.UnelevatedButton">
