--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -28,7 +28,14 @@
         android:id="@+id/collectMainFragment"
         android:name="org.mpmg.mpapp.ui.fragments.collect.CollectMainFragment"
         android:label="fragment_collect_main"
-        tools:layout="@layout/fragment_collect_main" />
+        tools:layout="@layout/fragment_collect_main" >
+        <action
+            android:id="@+id/action_collectMainFragment_to_publicWorkAddFragment2"
+            app:destination="@id/publicWorkAddFragment2" />
+        <action
+            android:id="@+id/action_collectMainFragment_to_photoAddFragment"
+            app:destination="@id/photoAddFragment" />
+    </fragment>
     <fragment
         android:id="@+id/setupApplicationFragment"
         android:name="org.mpmg.mpapp.ui.fragments.setup.SetupApplicationFragment"
@@ -38,6 +45,15 @@
             android:id="@+id/action_setupApplicationFragment_to_baseFragment"
             app:destination="@id/baseFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/publicWorkAddFragment2"
+        android:name="org.mpmg.mpapp.ui.fragments.publicwork.fragments.PublicWorkAddFragment"
+        android:label="PublicWorkAddFragment" />
+    <fragment
+        android:id="@+id/photoAddFragment"
+        android:name="org.mpmg.mpapp.ui.fragments.photo.PhotoAddFragment"
+        android:label="fragment_add_photo"
+        tools:layout="@layout/fragment_add_photo" />
 
 
 </navigation>
