--- a/app/src/main/res/layout/fragment_add_photo.xml
+++ b/app/src/main/res/layout/fragment_add_photo.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_main"
+    android:id="@+id/constraintLayout_addPhotoFragment_mainContainer"
     tools:context=".ui.fragments.photo.PhotoAddFragment">
 
     <TextView
