--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -26,15 +26,19 @@
 
     <fragment
         android:id="@+id/collectMainFragment"
-        android:name="org.mpmg.mpapp.ui.fragments.collect.CollectMainFragment"
+        android:name="org.mpmg.mpapp.ui.fragments.collect.fragments.CollectMainFragment"
         android:label="fragment_collect_main"
-        tools:layout="@layout/fragment_collect_main" >
+        tools:layout="@layout/fragment_collect_main">
         <action
             android:id="@+id/action_collectMainFragment_to_publicWorkAddFragment2"
             app:destination="@id/publicWorkAddFragment2" />
         <action
             android:id="@+id/action_collectMainFragment_to_photoAddFragment"
             app:destination="@id/photoAddFragment" />
+        <action
+            android:id="@+id/action_collectMainFragment_pop"
+            app:popUpTo="@id/collectMainFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/setupApplicationFragment"
@@ -49,6 +53,7 @@
         android:id="@+id/publicWorkAddFragment2"
         android:name="org.mpmg.mpapp.ui.fragments.publicwork.fragments.PublicWorkAddFragment"
         android:label="PublicWorkAddFragment" />
+
     <fragment
         android:id="@+id/photoAddFragment"
         android:name="org.mpmg.mpapp.ui.fragments.photo.PhotoAddFragment"
