--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -6,14 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.map.MapFragment">
 
-    <TextView
-        android:id="@+id/textView_mapFragment_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Location"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapView_mapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="@dimen/margin_medium"
+        app:layout_constraintBottom_toTopOf="@+id/materialButton_mapFragment_confirm"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/materialButton_mapFragment_confirm"
+        style="@style/MPAppTheme.ButtonBigBlue"
+        android:layout_width="300dp"
+        android:layout_height="@dimen/height_default"
+        android:layout_marginBottom="@dimen/margin_medium"
+        android:text="@string/button_confirm_location"
+        app:layout_constraintBottom_toTopOf="@+id/materialButton_mapFragment_cancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/materialButton_mapFragment_cancel"
+        style="@style/MPAppTheme.ButtonBigGrey"
+        android:layout_width="300dp"
+        android:layout_height="@dimen/height_default"
+        android:layout_marginBottom="@dimen/margin_xlarge"
+        android:text="@string/button_cancel"
+        android:textColor="@color/title2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
