--- a/app/src/main/res/layout/fragment_public_work_add.xml
+++ b/app/src/main/res/layout/fragment_public_work_add.xml
@@ -36,6 +36,19 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/materialButton_addPublicWorkFragment_map"
+                    style="@style/MPAppTheme.ButtonSmallBlue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/button_default"
+                    android:layout_marginEnd="@dimen/margin_default"
+                    android:backgroundTint="@color/button2"
+                    android:text="@string/button_add"
+                    app:icon="@drawable/ic_location"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView_addPublicWorkFragment_title"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/textView_addPublicWorkFragment_title" />
+
                 <TextView
                     android:id="@+id/textView4"
                     style="@style/MPAppTheme.InputTitle1"
@@ -214,12 +227,11 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/materialButton_addPublicWorkFragment_add"
-                    style="@style/MPAppTheme.Button1"
+                    style="@style/MPAppTheme.ButtonBigBlue"
                     android:layout_width="300dp"
                     android:layout_height="@dimen/height_default"
                     android:layout_marginTop="@dimen/margin_xlarge"
                     android:layout_marginBottom="@dimen/margin_xlarge"
-                    android:backgroundTint="@color/button1"
                     android:enabled="@{publicWorkViewModel.isPublicWorkValid}"
                     android:text="@string/title_public_work_add"
                     app:layout_constraintBottom_toBottomOf="parent"
