--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -17,17 +17,10 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/publicWorkAddFragment"
-        android:icon="@drawable/ic_add"
+        android:id="@+id/publicWorkSendFragment"
+        android:icon="@drawable/ic_send"
         android:orderInCategory="3"
-        android:title="@string/menu_add"
-        app:showAsAction="always" />
-
-<!--    <item-->
-<!--        android:id="@+id/publicWorkSendFragment"-->
-<!--        android:icon="@drawable/ic_send"-->
-<!--        android:orderInCategory="3"-->
-<!--        android:title="@string/menu_send"-->
-<!--        app:showAsAction="always"/>-->
+        android:title="@string/menu_send"
+        app:showAsAction="always"/>
 
 </menu>
