--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,10 @@
 
     <color name="button1">#2F80ED</color>
     <color name="button2">#E0E0E0</color>
+    <color name="button3">#F2F2F2</color>
 
-    <color name="buttonText1">#2F80ED</color>
+    <color name="buttonValid1">#2F80ED</color>
+    <color name="buttonInvalid1">#EB5757</color>
 
     <color name="textAddress">#828282</color>
 
