--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,22 +56,38 @@
         <item name="android:singleLine">true</item>
     </style>
 
-    <style name="MPAppTheme.Button1" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+
+    <style name="MPAppTheme.ButtonBase" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
         <item name="android:letterSpacing">0</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">@font/nunito_bold</item>
-        <item name="android:textSize">@dimen/font_large</item>
     </style>
 
-    <style name="MPAppTheme.Button2" parent="Widget.MaterialComponents.Button.UnelevatedButton">
-        <item name="android:insetTop">0dp</item>
-        <item name="android:insetBottom">0dp</item>
-        <item name="android:letterSpacing">0</item>
-        <item name="android:textAllCaps">false</item>
+    <style name="MPAppTheme.ButtonBigBlue" parent="MPAppTheme.ButtonBase">
         <item name="borderWidth">0dp</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:backgroundTint">@color/button1</item>
+    </style>
+
+    <style name="MPAppTheme.ButtonBigGrey" parent="MPAppTheme.ButtonBase">
+        <item name="borderWidth">0dp</item>
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:backgroundTint">@color/button3</item>
+    </style>
+
+    <style name="MPAppTheme.ButtonSmallBlue" parent="MPAppTheme.ButtonBase">
         <item name="android:textSize">@dimen/font_default</item>
+        <item name="android:backgroundTint">@color/button2</item>
+        <item name="android:textColor">@color/buttonValid1</item>
+        <item name="iconTint">@color/buttonValid1</item>
+    </style>
+
+    <style name="MPAppTheme.ButtonSmallRed" parent="MPAppTheme.ButtonBase">
+        <item name="android:textSize">@dimen/font_default</item>
+        <item name="android:backgroundTint">@color/button2</item>
+        <item name="android:textColor">@color/buttonInvalid1</item>
+        <item name="iconTint">@color/buttonInvalid1</item>
     </style>
 </resources>
